corrected some home page alignment errors

--- a/SPA/src/app/home/home.component.css
+++ b/SPA/src/app/home/home.component.css
@@ -1,13 +1,16 @@
 body {
   font-family: Arial, sans-serif;
   margin: 0;
-  /*use rga*/
-  background-color: rgba(0, 0, 0, 0.3);
+  padding: 0;
 }
 
 .topnav {
   background-color: #333;
   overflow: hidden;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 .topnav a {
@@ -36,7 +39,7 @@ body {
 }
 
 .sidebar a {
-  padding: 15px 25px;
+  padding: 15px 20px;
   text-decoration: none;
   font-size: 20px;
   color: #fff;
@@ -50,7 +53,7 @@ body {
 
 #menu-button {
   position: fixed;
-  top: 5px;
+  top: 2px;
   left: 20px;
   font-size: 30px;
   cursor: pointer;
@@ -76,8 +79,11 @@ body {
 }
 
 #content {
-  margin-left: 0;
-  padding: 15px;
+  display: block;
+  padding-top: 30px;
+  padding-left: 5px;
+  left: 0;
+  width: 100%;
   transition: margin-left 0.3s;
 }
 
